--- a/app/globals.css
+++ b/app/globals.css
@@ -8,5 +8,6 @@
 body {
   margin: 0;
   background-color: var(--light-text);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
