--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,12 @@
 :root {
-  --dark-blue:#223667;
-  --light-text: #f4f6fb;
-  --button-blue: #4f70c4;
-  --medium-blue: #abbae1
+	--dark-blue: #223667;
+	--light-text: #f4f6fb;
+	--button-blue: #4f70c4;
+	--medium-blue: #abbae1;
 }
 
 body {
-  margin: 0;
-  background-color: var(--light-text);
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	margin: 0;
+	background-color: var(--light-text);
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
