--- a/app/page.module.css
+++ b/app/page.module.css
@@ -174,6 +174,10 @@
 		height: auto;
 		justify-content: center;
 	}
+
+	.about section {
+		margin: 50px 0;
+	}
 }
 
 .fishPicture {
@@ -262,6 +266,7 @@
 	margin: 0;
 	margin-left: 10px;
 	padding: 20px;
+	font-size: .5rem;
 }
 
 .aboutHeader {
@@ -270,18 +275,21 @@
 	align-items: center;
 	background-color: var(--light-text);
 	color: var(--dark-blue);
+	flex-direction: column;
+	height: 100%;
 }
 
 .aboutHeader h1 {
 	font-size: 4rem;
 	margin: 0 auto;
 	max-width: 40%;
+	line-height: 1;
 }
 
 .aboutHeader p {
 	max-width: 40%;
 	margin: 0 auto;
-	height: 100px;
+	height: 100%;
 }
 
 .about section {
@@ -328,7 +336,7 @@
 	margin: auto 5%;
 	border: 2px solid var(--button-blue);
 	border-radius: 5px;
-	line-height: 1.5;
+	line-height: 1.75;
 	background-color: var(--light-text);
 }
 
